# tenzro-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  keystore.rs  lib.rs  main.rs  output.rs  rpc.rs  units.rs
src/commands/: adaptive_burn.rs  admin.rs  agent.rs  ap2.rs  app.rs  approval.rs  attested_clock.rs  auth.rs  axelar.rs  babylon.rs  bitvm2.rs  bond.rs  bridge.rs  bridge_fee.rs  caip.rs  canton.rs  capability.rs  capital.rs  ccip.rs  cct.rs  ceremony.rs  cluster.rs  compliance.rs  contract.rs  cortex.rs  crosschain.rs  crypto.rs  custody.rs  da.rs  database.rs  debridge.rs  discover.rs  dispute.rs  eip7702.rs  erc7579.rs  erc7683.rs  erc8004.rs  escrow.rs  events.rs  function.rs  (+64 more)
