[package]
name = "tenzro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tenzro Network CLI — node operation, wallet management, provider tools"

[[bin]]
name = "tenzro"
path = "src/main.rs"

[dependencies]
tenzro-types = { workspace = true }
tenzro-crypto = { workspace = true }
tenzro-wallet = { workspace = true }
tenzro-node = { workspace = true }
tenzro-model = { workspace = true }
tenzro-zk = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
sysinfo = "0.31"
sha2 = "0.10"
atty = "0.2"
chrono = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"

[features]
default = []
cuda = ["tenzro-model/cuda"]
cuda-no-vmm = ["tenzro-model/cuda-no-vmm"]
rocm = ["tenzro-model/rocm"]
vulkan = ["tenzro-model/vulkan"]
metal = ["tenzro-model/metal"]
